--- a/angular/src/app/frame/user-info/user-info.component.html
+++ b/angular/src/app/frame/user-info/user-info.component.html
@@ -1,3 +1,9 @@
-<p>
-  user-info works!
-</p>
+<form>
+  <div class="from-group">
+    <label for="usernameField" style>
+      <input type="text" id="usernameField" class="form-control" style="width:259px; margin:50px" [(ngModel)] = "this.username">
+      <input type="text" id="usernameField" class="form-control" style="width:259px; margin:50px" [(ngModel)] = "this.password">
+      
+    </label>
+  </div>
+</form>
