playing with styling and having a better time

--- a/angular/src/app/frame/main-chat/main-chat.component.html
+++ b/angular/src/app/frame/main-chat/main-chat.component.html
@@ -1,2 +1,4 @@
-<div>
+<div id="overall" class="container">
+    <div class="row align-items-start" id="overall"><p>omgs this is the greatest chat room i've ever seen</p></div>
+   <div class="row align-items-end" id="messagebox"> <app-chat-detail></app-chat-detail></div>   
 </div>
