--- a/angular/src/app/frame/user-info/user-info.component.html
+++ b/angular/src/app/frame/user-info/user-info.component.html
@@ -1,9 +1,9 @@
+<div id="userInfo">
 <form>
   <div class="from-group">
-    <label for="usernameField" style>
-      <input type="text" id="usernameField" class="form-control" style="width:259px; margin:50px" [(ngModel)] = "this.username">
-      <input type="text" id="usernameField" class="form-control" style="width:259px; margin:50px" [(ngModel)] = "this.password">
-      
-    </label>
+    <label for="usernameField">username</label>    
+      <input type="text" id="usernameField" class="form-control" [(ngModel)] = "this.username">
+      <input type="text" id="passwordField" class="form-control" [(ngModel)] = "this.password">
   </div>
 </form>
+</div>
