--- a/angular/src/app/frame/frame.component.html
+++ b/angular/src/app/frame/frame.component.html
@@ -1,6 +1,9 @@
-<div>
-  <div><app-main-chat></app-main-chat></div>
-  <div><app-user-info></app-user-info></div>
-   <div><app-friends></app-friends></div>
-  <div><app-private-message></app-private-message></div>
+<div class="container">
+  <div class="row">
+  <div class="col-sm-8 border border-primary"  id="chatroom"><app-main-chat></app-main-chat></div>
+  <div class="col-sm-4 border border-secondary" id="friends"><app-friends></app-friends></div>
 </div>
+<div class="row">
+   <div class="col-sm-8" id="myInfo"><app-user-info></app-user-info></div>
+  <div class="col-sm-4" id="privateMessage"><app-private-message></app-private-message></div>
+</div></div>
