Figured out how to list lists

--- a/angular/src/app/frame/guest-list/guest-list.component.html
+++ b/angular/src/app/frame/guest-list/guest-list.component.html
@@ -1,3 +1,5 @@
 <p>
-  guest-list works!
+    <li *ngFor = "let users of user; let i = index">
+        <span class = "users">{{user[i].email}}</span>
+      </li>
 </p>
