--- a/angular/src/app/frame/main-chat/main-chat.component.html
+++ b/angular/src/app/frame/main-chat/main-chat.component.html
@@ -1,4 +1,7 @@
 <div id="overall" class="container">
-  <div class="row" id="overall"><p>omgs this is the greatest chat room i've ever seen</p></div>
+  <div class="row" id="overall"><p>
+    <li *ngFor = "let comments of comment; let i = index">
+    <span class = "comments">{{comment[i].content}}</span>
+  </li></p></div>
  <div class="row" id="messagebox" > <app-chatbar></app-chatbar></div>   
 </div>
