--- a/angular/src/app/frame/main-chat/main-chat.component.css
+++ b/angular/src/app/frame/main-chat/main-chat.component.css
@@ -15,3 +15,11 @@
         border: top 6;
         border:red;
     }
+	li
+	{
+        list-style-type: none;
+		padding:8px;
+		color: black;
+		background-color: darkblue;
+        margin:5px;
+	}
