started on the private chat

--- a/angular/src/app/frame/frame.component.html
+++ b/angular/src/app/frame/frame.component.html
@@ -7,8 +7,8 @@
   </div>   
 
   <div class="col-sm-4" id="right">
-      <div><app-guest-list></app-guest-list></div>
-      <div class="row"> <app-private-message></app-private-message></div>
+      <div id="friends"><app-guest-list></app-guest-list></div>
+      <div id="privateMessage" class="row"> <app-private-message></app-private-message></div>
  </div>
 
 
