--- a/angular/src/app/frame/private-message/private-message.component.html
+++ b/angular/src/app/frame/private-message/private-message.component.html
@@ -1,4 +1,6 @@
-<div id="pmContainer"><p>
-  private-message works!
-</p>
+<div id="pmContainer">
+
+  <div></div>
+
 </div>
+<app-chat-detail></app-chat-detail>
