--- a/angular/src/app/frame/frame.component.css
+++ b/angular/src/app/frame/frame.component.css
@@ -83,6 +83,7 @@ body, html {
   padding: 0;
   border-width: 3px;
   overflow:   scroll;
+  height:65vh;
 }
 
 #myInfo {
@@ -92,6 +93,7 @@ body, html {
   padding: 0;
   border-width: 3px;
   width:100%;
+  height: 35vh;
 }
 
 #privateMessage {
@@ -99,4 +101,5 @@ body, html {
   border-color: #c74a4f;
   padding: 0;
   border-width: 3px;
+  height: 35vh;
 }
