i am working on the private chat service

--- a/angular/src/app/frame/private-message/chat-detail/chat-detail.component.html
+++ b/angular/src/app/frame/private-message/chat-detail/chat-detail.component.html
@@ -1,3 +1,2 @@
-<p>
-  chat-detail works!
-</p>
+<div id="privateChat" class="show"> <input type="text" class="form-control inputs" required name="username"
+  [(ngModel)]="comment.content"> </div>
