--- a/angular/src/app/frame/private-message/private-message.component.html
+++ b/angular/src/app/frame/private-message/private-message.component.html
@@ -1,6 +1,6 @@
 <div id="pmContainer">
 
-  <div></div>
+  <div style="height:84%; background-color:beige"></div>
 
+  <div id="privateBar" class="position-relative botton"><app-chat-detail></app-chat-detail></div>
 </div>
-<app-chat-detail></app-chat-detail>
