Trying to figure out user info

--- a/angular/src/app/frame/guest-list/guest-list.component.css
+++ b/angular/src/app/frame/guest-list/guest-list.component.css
@@ -10,4 +10,12 @@
           width: 0px;
           background: transparent; /* make scrollbar transparent */
       }
+    li
+	{
+        list-style-type: none;
+		padding:8px;
+		color: black;
+		background-color: lightgreen;
+        margin:5px;
+	}
     
