--- a/angular/src/app/frame/frame.component.css
+++ b/angular/src/app/frame/frame.component.css
@@ -89,11 +89,12 @@ body, html {
 #myInfo {
   border-style: solid;
   border-width: 2px;
-  border-color: #4a8ec7;
+  border-color: #c227ba;
   padding: 0;
-  border-width: 3px;
+  border-width: 4.5px;
   width:100%;
   height: 35vh;
+  margin : 3px;
 }
 
 #privateMessage {
