--- a/angular/src/app/frame/user-info/user-info.component.css
+++ b/angular/src/app/frame/user-info/user-info.component.css
@@ -1,7 +1,8 @@
 #userInfo{
     background-color:#fcf7f2;
-    height:100%;
-    width:100%;
+    height:99%;
+    width:312%;
+    margin: 2px;
 }
 
 #loginbtn{
